sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:2: error: not found: value gap
def combSort() {gap=getValueCount() ; test=false
                ^AlgCombSort:2: error: not found: value test
def combSort() {gap=getValueCount() ; test=false
                                      ^AlgCombSort:4: error: not found: value test
                {test=true; if (gap>1) {gap=gap/1.3}; var i:Int=0;
                 ^AlgCombSort:4: error: not found: value gap
                {test=true; if (gap>1) {gap=gap/1.3}; var i:Int=0;
                                ^AlgCombSort:4: error: not found: value gap
                {test=true; if (gap>1) {gap=gap/1.3}; var i:Int=0;
                                        ^AlgCombSort:5: error: not found: value gap
while (i+gap<getValueCount()) {if (isSmaller(i+gap, i)) {swap(i+gap, i); test=false}; i=i+1}
         ^AlgCombSort:5: error: not found: value gap
while (i+gap<getValueCount()) {if (isSmaller(i+gap, i)) {swap(i+gap, i); test=false}; i=i+1}
                                               ^AlgCombSort:5: error: not found: value gap
while (i+gap<getValueCount()) {if (isSmaller(i+gap, i)) {swap(i+gap, i); test=false}; i=i+1}
                                                                ^AlgCombSort:5: error: not found: value test
while (i+gap<getValueCount()) {if (isSmaller(i+gap, i)) {swap(i+gap, i); test=false}; i=i+1}
                                                                         ^AlgCombSort:6: error: not found: value gap
                } while ((gap>1)||(!test))} 
                          ^AlgCombSort:6: error: not found: value test
                } while ((gap>1)||(!test))} 
                                    ^